# ditto-skill

./: .gitignore  README.en.md  README.md  SKILL.md  logo-prompts.md  pyproject.toml
agents/: openai.yaml
ditto_skill/: analysis.py  git_history.py  heuristics.py  llm_review.py  models.py  repo_intake.py  synthesis.py
docs/superpowers/plans/: 2026-04-17-ditto-skill-implementation.md
docs/superpowers/specs/: 2026-04-17-ditto-skill-design.md
references/: artifact-schema.md  milestone-rubric.md  profile-ai-agent.md  profile-general.md  profile-web-saas.md  skill-package-template.md
scripts/: analyze_repo.py  common.py  compile_insights.py  compile_review.py  distill_repo.py  full_distill.py  prepare_insights_draft.py  review_milestones.py  synthesize_skill.py
tests/: helpers.py  test_analysis.py  test_git_history.py  test_helpers.py  test_heuristics.py  test_llm_review.py  test_repo_intake.py  test_scripts_analyze.py  test_scripts_compile_insights.py  test_scripts_compile_review.py  test_scripts_full.py  test_scripts_review.py  test_scripts_synthesize.py  test_synthesis.py
